# Binoculars

./: .env_sample  .gitignore  download_models.py  main.py  pyproject.toml  score_parquets.py
binoculars/: cuda_util.py  detector.py
