[project]
name = "binoculars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch>=2.11.0",
    "datasets>=5.0.0",
    "gradio>=6.19.0",
    "gradio-client>=2.5.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "transformers[torch]>=5.12.1",
    "dotenv>=0.9.9",
]
